--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
   <tbody class="tbo">
       <tr class="tbo">
           <td class="n1">1</td>
-          <td><a href="coins.html" class="btn9">MEME</a></td>
+          <td><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">MEME</a></td>
           <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
           <td>BSC</td>
           <td class="mc">presale</td>
@@ -367,7 +367,7 @@
       <tr>
           <td  class="n1">2</td>
 
-          <td><a href="coins.html">MEMEBET</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">MEMEBET</a></td>
           <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -378,7 +378,7 @@
       </tr>
       <tr>
           <td   class="n1">3</td>
-          <td><a href="coins.html">STARS</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">STARS</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -389,7 +389,7 @@
       </tr>
       <tr>
           <td class="n1">4</td>
-          <td><a href="coins.html"> FLOCK</a></td>
+          <td><a href="coins.html"> <a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">FLOCK</a></td>
           <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -400,7 +400,7 @@
       </tr>
       <tr>
           <td class="n1">5</td>
-          <td><a href="coins.html"> AUTOS</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif"> AUTOS</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -411,7 +411,7 @@
       </tr>
       <tr>
           <td class="n1">6</td>
-          <td><a href="coins.html">DIGI</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">DIGI</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -422,7 +422,7 @@
       </tr>
       <tr>
           <td class="n1">7</td>
-          <td><a href="coins.html">DOGEN</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">DOGEN</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -433,7 +433,7 @@
       </tr>
       <tr>
           <td class="n1">8</td>
-          <td><a href="coins.html">RXS</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">RXS</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -444,7 +444,7 @@
       </tr>
       <tr>
           <td class="n1">9</td>
-          <td><a href="coins.html">CASINO</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">CASINO</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -455,7 +455,7 @@
       </tr>
       <tr>
           <td class="n1">10</td>
-          <td><a href="coins.html">PEPU</a></td>
+          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">PEPU</a></td>
           <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
           <td>ETH</td>
           <td class="mc">presale</td>
@@ -496,7 +496,7 @@
     </thead>
     <tbody class="tbo">
       <td class="n1">1</td>
-      <td><a href="coins.html" class="btn9">MEME</a></td>
+      <td><a href="coins.html" class="btn9"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">MEME</a></td>
       <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
       <td>BSC</td>
       <td class="mc">presale</td>
@@ -508,7 +508,7 @@
   <tr>
     <td  class="n1">2</td>
 
-    <td><a href="coins.html">MEMEBET</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">MEMEBET</a></td>
     <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -519,7 +519,7 @@
 </tr>
 <tr>
     <td   class="n1">3</td>
-    <td><a href="coins.html">STARS</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">STARS</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -530,7 +530,7 @@
 </tr>
 <tr>
     <td class="n1">4</td>
-    <td><a href="coins.html"> FLOCK</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif"> FLOCK</a></td>
     <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -541,7 +541,7 @@
 </tr>
 <tr>
     <td class="n1">5</td>
-    <td><a href="coins.html"> AUTOS</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif"> AUTOS</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -552,7 +552,7 @@
 </tr>
 <tr>
     <td class="n1">6</td>
-    <td><a href="coins.html">DIGI</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">DIGI</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -563,7 +563,7 @@
 </tr>
 <tr>
     <td class="n1">7</td>
-    <td><a href="coins.html">DOGEN</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">DOGEN</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -574,7 +574,7 @@
 </tr>
 <tr>
     <td class="n1">8</td>
-    <td><a href="coins.html">RXS</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">RXS</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -585,7 +585,7 @@
 </tr>
 <tr>
     <td class="n1">9</td>
-    <td><a href="coins.html">CASINO</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">CASINO</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -596,7 +596,7 @@
 </tr>
 <tr>
     <td class="n1">10</td>
-    <td><a href="coins.html">PEPU</a></td>
+    <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">PEPU</a></td>
     <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
     <td>ETH</td>
     <td class="mc">presale</td>
@@ -640,10 +640,10 @@
             <span class="ccc">
                 <h4></h4>
                 <div class="dd">
-              <a><img href="bsnavbar.html" class="c1" id="c1" src="./assets/2.avif"></a>  
+              <a><img href="news.html" class="c1" id="c1" src="./assets/2.avif"></a>  
             </span>
             <div class="car-details">
-            <h4 class="h33">Musk: Polymarket ‘more accurate than polls, as actual money is on the line’ </h4>
+          <a href="news.html">  <h4 class="h33">Musk: Polymarket ‘more accurate than polls, as actual money is on the line’ </h4></a>
             <br>
             <h4 class="hh5">by Yashu Gola</h4>
           <!--  <h4 class="h44">43 minutes ago</h4>-->
@@ -659,7 +659,7 @@
              <a href="bsnavbar.html"><img class="c2" id="c1" src="./assets/3.avif"></a>   
             </span>
             <div class="car-details">
-                <h4 class="h33">ECB official proposes unified European ledger for digital assets</h4>
+                <a href="news.html" <h4 class="h33">ECB official proposes unified European ledger for digital assets</h4></a>
                 <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -674,7 +674,7 @@
                <a href="bsnavbar.html"><img class="c3" id="c1"  src="./assets/4.avif"></a> 
             </span>
             <div class="car-details">
-                <h4 class="h33">Why is Bitcoin price up today? </h4>
+             <a href="news.html">   <h4 class="h33">Why is Bitcoin price up today? </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -689,7 +689,7 @@
                 <img class="c4" id="c1" src="./assets/5.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">EigenLayer eyes consumer adoption post EIGEN unlock, founder says</h4>
+              <a href="news.html">  <h4> class="h33">EigenLayer eyes consumer adoption post EIGEN unlock, founder says</h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -704,7 +704,7 @@
                 <img class="c5" id="c1" src="./assets/6.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">Here’s what happened in crypto today </h4>
+              <a href="news.html">  <h4 class="h33">Here’s what happened in crypto today </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -719,7 +719,7 @@
                 <img class="c6" id="c1" src="./assets/7.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">National Bank of Bahrain rolls out its first Bitcoin investment fund </h4>
+                <a href="news.html"> <h4 class="h33">National Bank of Bahrain rolls out its first Bitcoin investment fund </h4></a>
                 <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -734,7 +734,7 @@
                 <img class="c7" id="c1" src="./assets/8.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">Bittensor (TAO) leads AI token rally with 160%+ monthly gain </h4>
+               <a href="news.html"> <h4 class="h33">Bittensor (TAO) leads AI token rally with 160%+ monthly gain </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -749,7 +749,7 @@
                 <img class="c8" id="c1" src="./assets/9.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">Bankruptcy judge approves FTX’s reorganization plan </h4>
+               <a href="news.html"> <h4 class="h33">Bankruptcy judge approves FTX’s reorganization plan </h4></a>
                 <h4>by Yashu Gola</h4>
                
               </div>
@@ -762,7 +762,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+              <a href="news.html">  <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -777,7 +777,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+              <a href="news.html">  <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -792,7 +792,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+           <a href="news.html">     <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -807,7 +807,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+             <a href="news.html">   <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -822,7 +822,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+              <a href="news.html">  <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -837,7 +837,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+             <a href="news.html">   <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -852,7 +852,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+              <a href="news.html">  <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -867,7 +867,7 @@
                 <img class="c9" id="c1" src="./assets/10.avif">
             </span>
             <div class="car-details">
-                <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4>
+             <a href="news.html">   <h4 class="h33">US DOJ, SEC back suit against Nvidia, EU drafting AI ‘Code of Practice’  </h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -882,7 +882,7 @@
                         <img class="c10" id="c1" src="./assets/11.avif">
                     </span>
                     <div class="car-details">
-                        <h4 class="h33">Tether user base hits 350M in 2024 following 24% surge </h4>
+                       <a href="news.html"> <h4 class="h33">Tether user base hits 350M in 2024 following 24% surge </h4></a>
                        <br>
                        
                         <h4>by Yashu Gola</h4>
