--- a/header.html
+++ b/header.html
@@ -26,13 +26,13 @@
             <ul>
                 <ul class="menulist">
                   
-                    <li><a href="#"><img class="logo" src="./assets/1.2af2e54f9460baf51bef.png"></a></li>
+                    <li><a href="index.html"><img class="logo" src="./assets/mainlogo.png"></a></li>
                     <span class="onlyd">
-                    <li><a href="#"><img class="coin2" src="./assets/vecteezy_telegram-png-icon_16716482.png"></a></li>
-                   <li><a class="divcoin" href="#">255k</a></li>
-                    <li class="coin1"><a href="#">coin</a></li>
+                    <li><a href="https://t.me/bullishmarketzone"><img class="coin2" src="./assets/vecteezy_telegram-png-icon_16716482.png"></a></li>
+                   <li><a class="divcoin" href="https://t.me/bullishmarketzone">255k</a></li>
+                    <li class="coin1"><a href="https://t.me/bullishmarketzone">coin</a></li>
                     <li><a href="#"><img class="coin4" src="./assets/vecteezy_telegram-png-icon_16716482.png"></a></li>
-                   <li><a class="divcoin1" href="#">25k</a></li>
+                   <li><a class="divcoin1" href="https://t.me/bullishmarketzone">25k</a></li>
                     <li class="coin1"><a href="#">	
                       <!--<form id="new-task-form">
                       <input 
