--- a/index.html
+++ b/index.html
@@ -906,49 +906,9 @@
 
 
 
-  <footer class="footer">
-    <div class="container3">
-    <div class="row">
-        <div class="footer-col">
-            <h4>address</h4>
-            <ul>
-                <li><a href="#">canada</a></li>
-                <li><a href="#">our service</a></li>
-                <li><a href="#">privacy policy</a></li>
-                <li><a href="#">affiliate program</a></li>
-            </ul>
-        </div>
-        <div class="footer-col">
-            <h4>about us</h4>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">admissions</a></li>
-                <li><a href="#">Academics</a></li>
-                <li><a href="#">Student life</a></li>
-            </ul>
-        </div>
-        <div class="footer-col">
-            <h4>Amissions</h4>
-            <ul>
-                <li><a href="#">Amission process</a></li>
-                <li><a href="#">Event Calendar</a></li>
-            </ul>
-        </div>
-        <div class="footer-col">
-            <h4>Academics</h4>
-            <ul>
-                <li><a href="#">Early years</a></li>
-                <li><a href="#">primary</a></li>
-                <li><a href="#">secondary</a></li>
-            </ul>
-        </div>
-                
-               
-    </div>
-        </div>
-    </div>
-    </div>
+<footer class="footerbar">
+
+</footer>
 
 
 
@@ -1056,5 +1016,6 @@
     </script>
     <script src="index.js"></script>
     <script src="header.js"></script>
+    <script src="footer.js"></script>
 </body>
 </html>
