--- a/index.html
+++ b/index.html
@@ -905,10 +905,50 @@
 </div>
 
 
-
 <footer class="footerbar">
-
-</footer>
+  <div class="container3">
+  <div class="row">
+      <div class="footer-col">
+          <h4>address</h4>
+          <ul>
+              <li><a href="#">canada</a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></li>
+          </ul>
+      </div>
+      <div class="footer-col">
+          <h4>about us</h4>
+          <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+          </ul>
+      </div>
+      <div class="footer-col">
+          <h4>MARKETING</h4>
+          <ul>
+              <li><a href="https://t.me/wavezads">crypto Twitter Influencers</a></li>
+              <li><a href="https://t.me/wavezads">worldwide crypto marketing Agency</a></li>
+              <li><a href="https://t.me/wavezads">Angel investors</a></li>
+          </ul>
+      </div>
+      <div class="footer-col">
+          <h4>services</h4>
+          <ul>
+              <li><a href="https://t.me/wavezads">Designs</a></li>
+              <li><a href="https://t.me/wavezads">Contract Developers</a></li>
+              <li><a href="https://t.me/wavezads">sefu Developers</a></li>
+              <li><a href="https://t.me/wavezads">Dapp+ web Developers</a></li>
+          </ul>
+      </div>
+              
+             
+  </div>
+      </div>
+      </footer>
 
 
 
