--- a/index.html
+++ b/index.html
@@ -334,142 +334,9 @@
 </div>
 </section>
 
+<div class="promotedform">
 
-<section class="advanced-table1">
-  <div class="tablenew">
-   <div class="scroll-container">
-<table class="advanced-table">
-  <thead>
-      <tr>
-          <th class="n1">#</th>
-          <th>Coins</th>
-          <th>Total Boosts</th>
-          <th>chains</th>
-          <th class="mc">market cap</th>
-          <th class="pr">price</th>
-          <th class="ch1">Change 24h</th>
-          <th>Launch</th>
-          <th>telegram</th>
-      </tr>
-  </thead>
-  <tbody class="tbo">
-      <tr class="tbo">
-          <td class="n1">1</td>
-          <td><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">MEME</a></td>
-          <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
-          <td>BSC</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td  class="n1">2</td>
-
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">MEMEBET</a></td>
-          <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td   class="n1">3</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">STARS</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">4</td>
-          <td><a href="coins.html"> <a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">FLOCK</a></td>
-          <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">5</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif"> AUTOS</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">6</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">DIGI</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">7</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">DOGEN</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">8</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">RXS</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">9</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">CASINO</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-      <tr>
-          <td class="n1">10</td>
-          <td><a href="coins.html"><a href="coins.html" class="btn9"><img class="coinsm" src="./assets/11.avif">PEPU</a></td>
-          <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-          <td>ETH</td>
-          <td class="mc">presale</td>
-          <td class="pr"><h4 class="hardcap">hardcap</h4></td>
-          <td class="ch1"><h4 class="hardcap">softcap</h4></td>
-          <td>in 1 month</td>
-          <td>click</td>
-      </tr>
-  </tbody>
-</table>
 </div>
-</div>
-</section>
-</span>
 
 
 <section>
@@ -1057,5 +924,6 @@
     <script src="index.js"></script>
     <script src="header.js"></script>
     <script src="footer.js"></script>
+    <script src="promotion.js"></script>
 </body>
 </html>
