--- a/coins.html
+++ b/coins.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css\coins.css">
+   
 </head>
 <body>
     <header class="headerbar">
@@ -22,10 +23,12 @@
     <div class="adscoin33">
         <a href="#"><img class="adscoin3" src="./assets/rRPWvY7TgblG7XgIgqgC7BtX4uC2P1MjlxQtrX2v.png"></a>
     </div>
-
+    <div class="coinl">
+        <img class="coinlogo" src="./assets/111.jpg8ec8b1a6-781b-4e65-a254-12e64423f2b3">
+    </div>
     <div class="infobox">
         <div class="infobox1" id="infobox">
-            <h3 class="tele">TELEGRAM</h3>
+            <h3 class="tele">Details</h3>
                 <p class="coinf1">Cheeseball ($CB) is a Solana-based meme coin that embraces humor and fun, driven by a fat cat wizard mascot. It fosters community engagement through lighthearted 
                     content while maintaining a decentralized focus in the crypto space.</p>
                 <div class="btnn">
@@ -55,11 +58,17 @@
     </div>
 <div>
     <h2>promoted coins</h2>
-    <nav class="advanced-table1">
-    </nav>
+    <div class="promotedform">
+    </div>
 </div>
-    
+
+    <div>
+<footer class="footerbar">
+</footer>
+</div>
+
     <script src="header.js"></script>
     <script src="promotion.js"></script>
+    <script src="footer.js"></script>
 </body>
 </html>
