--- a/promotionp.html
+++ b/promotionp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  
-<section class="advanced-table1">
+<div class="promotedform">
     <div class="tablenew">
      <div class="scroll-container">
   <table class="advanced-table">
@@ -28,7 +28,7 @@
     <tbody class="tbo">
         <tr class="tbo">
             <td class="n1">1</td>
-            <td><a href="coins.html" class="btn9">MEME</a></td>
+            <td><a href="/coin.html/meme.html" class="btn9">MEME</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
             <td>BSC</td>
             <td class="mc">presale</td>
@@ -40,7 +40,7 @@
         <tr>
             <td  class="n1">2</td>
   
-            <td><a href="coins.html">MEMEBET</a></td>
+            <td><a href="/coin.html/pepe.html">PEPE</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
             <td>ETH</td>
             <td class="mc">presale</td>
@@ -51,7 +51,7 @@
         </tr>
         <tr>
             <td   class="n1">3</td>
-            <td><a href="coins.html">STARS</a></td>
+            <td><a href="/coin.html/memebet.html">MEMEBET</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td>ETH</td>
             <td class="mc">presale</td>
@@ -62,7 +62,7 @@
         </tr>
         <tr>
             <td class="n1">4</td>
-            <td><a href="coins.html"> FLOCK</a></td>
+            <td><a href="/coin.html/star.html"> star</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
             <td>ETH</td>
             <td class="mc">presale</td>
@@ -147,6 +147,7 @@
   </div>
   </section>
   </span>
+</div>
     <script src="promotion.js"></script>
 </body>
 </html>
