--- a/index.html
+++ b/index.html
@@ -507,10 +507,10 @@
             <span class="ccc">
                 <h4></h4>
                 <div class="dd">
-              <a><img href="news.html" class="c1" id="c1" src="./assets/2.avif"></a>  
+              <a><img href="/newshere.html/robot.html" class="c1" id="c1" src="/assets/newsrobot.avif"></a>  
             </span>
             <div class="car-details">
-          <a href="news.html">  <h4 class="h33">Musk: Polymarket ‘more accurate than polls, as actual money is on the line’ </h4></a>
+          <a href="/newshere.html/robot.html">  <h4 class="h33">Musk: Polymarket ‘more accurate than polls, as actual money is on the line’ </h4></a>
             <br>
             <h4 class="hh5">by Yashu Gola</h4>
           <!--  <h4 class="h44">43 minutes ago</h4>-->
@@ -523,10 +523,10 @@
         <div class="carlist-1">
             <span class="ccc">
                 <div class="dd">
-             <a href="bsnavbar.html"><img class="c2" id="c1" src="./assets/3.avif"></a>   
+             <a href="/newshere.html/worldcoin.html"><img class="c2" id="c1" src="/assets/newsimg/world.avif"></a>   
             </span>
             <div class="car-details">
-                <a href="news.html" <h4 class="h33">ECB official proposes unified European ledger for digital assets</h4></a>
+                <a href="/newshere.html/worldcoin.html"> <h4 class="h33">ECB official proposes unified European ledger for digital assets</h4></a>
                 <br>
                 <h4>by Yashu Gola</h4>
                 <br>
@@ -538,10 +538,11 @@
         <div class="carlist-1">
             <span class="ccc">
                 <div class="dd">
-               <a href="bsnavbar.html"><img class="c3" id="c1"  src="./assets/4.avif"></a> 
+               <a href="/newshere.html/eth.html"><img class="c3" id="c1"  src="/assets/newsimg/eth.avif"></a> 
             </span>
             <div class="car-details">
-             <a href="news.html">   <h4 class="h33">Why is Bitcoin price up today? </h4></a>
+             <a href="/newshere.html/eth.html">   <h4 class="h33">Ethereum’s Pectra fork adds 
+              dynamic blob fees to to improve L2 scaling</h4></a>
                <br>
                 <h4>by Yashu Gola</h4>
                 <br>
