--- a/promotionp.html
+++ b/promotionp.html
@@ -16,20 +16,23 @@
         <tr>
             <th class="n1">#</th>
             <th>Coins</th>
-            <th>Total Boosts</th>
+            <th>boost</th>
+            <th>Total boosts</th>
+            <th></th>
             <th>chains</th>
             <th class="mc">market cap</th>
             <th class="pr">price</th>
             <th class="ch1">Change 24h</th>
             <th>Launch</th>
-            <th>telegram</th>
+            
         </tr>
     </thead>
     <tbody class="tbo">
         <tr class="tbo">
             <td class="n1">1</td>
             <td><a href="/coin.html/meme.html" class="btn9">MEME</a></td>
-            <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
+            <td><a href="https://t.me/wavezads"><h4 class="boost1"><p>82,333</p>boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>BSC</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -42,6 +45,7 @@
   
             <td><a href="/coin.html/pepe.html">PEPE</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -53,6 +57,7 @@
             <td   class="n1">3</td>
             <td><a href="/coin.html/memebet.html">MEMEBET</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -64,6 +69,7 @@
             <td class="n1">4</td>
             <td><a href="/coin.html/star.html"> star</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -75,6 +81,7 @@
             <td class="n1">5</td>
             <td><a href="coins.html"> AUTOS</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -86,6 +93,7 @@
             <td class="n1">6</td>
             <td><a href="coins.html">DIGI</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -97,7 +105,8 @@
             <td class="n1">7</td>
             <td><a href="coins.html">DOGEN</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
-            <td>ETH</td>
+           
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td> <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
             <td class="ch1"><h4 class="hardcap">softcap</h4></td>
@@ -108,6 +117,7 @@
             <td class="n1">8</td>
             <td><a href="coins.html">RXS</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -119,6 +129,7 @@
             <td class="n1">9</td>
             <td><a href="coins.html">CASINO</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
@@ -130,6 +141,7 @@
             <td class="n1">10</td>
             <td><a href="coins.html">PEPU</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
+            <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
             <td class="mc">presale</td>
             <td class="pr"><h4 class="hardcap">hardcap</h4></td>
