--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="coin" href="./assets/Screenshot 2024-10-05 235538.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bullishmarketzone</title>
+    <title>coinwavez</title>
     <link rel="stylesheet" href="styles.css\style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
 </head>
@@ -494,7 +494,7 @@
   </section>
   <section>
     <div>
-      <h1 class="how">How does Bullish market zone work?</h1>
+      <h1 class="how">How does coin wavez work?</h1>
       </div>
       <div class="sinfo">
       <p class="sinfo">New cryptocurrency projects can be listed Applying Here. Once applied, they instantly become visible on the New Listings Page. After that, anyone can see and vote for the project.
