--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" type="coin" href="./assets/Screenshot 2024-10-05 235538.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>coinwavez</title>
+    
     <link rel="stylesheet" href="styles.css\style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
 </head>
@@ -943,5 +944,9 @@
     <script src="header.js"></script>
     <script src="footer.js"></script>
     <script src="promotion.js"></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
