--- a/newshere.html/bitcoinpump.html
+++ b/newshere.html/bitcoinpump.html
@@ -77,7 +77,10 @@
 <footer class="footerbar">
 </footer>
 </div>
-
+<script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
         <script src="/header.js"></script>
         <script src="/promotion.js"></script>
         <script src="/footer.js"></script>
