--- a/newshere.html/bitcoinpump.html
+++ b/newshere.html/bitcoinpump.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-      </script>
-      <script defer src="/_vercel/insights/script.js"></script>
     <link rel="stylesheet" href="/styles.css/coins.css">
     <link rel="stylesheet" href="/styles.css/news.css">
     <link rel="stylesheet" href="/styles.css/style.css">
@@ -81,7 +77,7 @@
 <footer class="footerbar">
 </footer>
 </div>
-
+</body>
         <script src="/header.js"></script>
         <script src="/promotion.js"></script>
         <script src="/footer.js"></script>
