--- a/index.html
+++ b/index.html
@@ -945,6 +945,9 @@
     <script src="header.js"></script>
     <script src="footer.js"></script>
     <script src="promotion.js"></script>
- 
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
