--- a/coin.html/meme.html
+++ b/coin.html/meme.html
@@ -67,9 +67,12 @@
 <footer class="footerbar">
 </footer>
 </div>
-
 <script src="/header.js"></script>
 <script src="/promotion.js"></script>
 <script src="/footer.js"></script>
+<script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
