--- a/promotionp.html
+++ b/promotionp.html
@@ -30,8 +30,8 @@
     <tbody class="tbo">
         <tr class="tbo">
             <td class="n1">1</td>
-            <td><a href="/coin.html/meme.html" class="btn9">MEME</a></td>
-            <td><a href="https://t.me/wavezads"><h4 class="boost1"><p>82,333</p>boost</h4></a></td>
+            <td><a href="/coin.html/meme.html" class="btn9"><img class="coinsm" src="/assets/meme.png"> MEME</a></td>
+            <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>BSC</td>
             <td class="mc">presale</td>
@@ -43,7 +43,7 @@
         <tr>
             <td  class="n1">2</td>
   
-            <td><a href="/coin.html/pepe.html">PEPE</a></td>
+            <td><a href="/coin.html/pepe.html"><img class="coinsm" src="/assets/pelu.png"> PEPE</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -55,7 +55,7 @@
         </tr>
         <tr>
             <td   class="n1">3</td>
-            <td><a href="/coin.html/memebet.html">MEMEBET</a></td>
+            <td><a href="/coin.html/memebet.html"><img class="coinsm" src="/assets/meme.png"> MEMEBET</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -67,7 +67,7 @@
         </tr>
         <tr>
             <td class="n1">4</td>
-            <td><a href="/coin.html/star.html"> star</a></td>
+            <td><a href="/coin.html/star.html"><img class="coinsm" src="/assets/star.png"> star</a></td>
             <td><a href="https://t.me/wavezads"><h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -79,7 +79,7 @@
         </tr>
         <tr>
             <td class="n1">5</td>
-            <td><a href="coins.html"> AUTOS</a></td>
+            <td><a href="/coin.html/shiba.html"><img class="coinsm" src="/assets/coinimg/shiba.png"> Shina</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -91,7 +91,7 @@
         </tr>
         <tr>
             <td class="n1">6</td>
-            <td><a href="coins.html">DIGI</a></td>
+            <td><a href="/coin.html/doge2014.html"><img class="coinsm" src="/assets/coinimg/dogem.png"> Doge2014</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -103,7 +103,7 @@
         </tr>
         <tr>
             <td class="n1">7</td>
-            <td><a href="coins.html">DOGEN</a></td>
+            <td><a href="/coin.html/casino.html"><img class="coinsm" src="/assets/coinimg/casino.png"> Casino</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
            
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td> <td>ETH</td>
@@ -115,7 +115,7 @@
         </tr>
         <tr>
             <td class="n1">8</td>
-            <td><a href="coins.html">RXS</a></td>
+            <td><a href="/coin.html/DTX.html"><img class="coinsm" src="/assets/coinimg/dtx.png"> DTX</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -127,7 +127,7 @@
         </tr>
         <tr>
             <td class="n1">9</td>
-            <td><a href="coins.html">CASINO</a></td>
+            <td><a href="/coin.html/bn.game.html"><img class="coinsm" src="/assets/coinimg/gngame.png"> BN.GAME</a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
@@ -139,7 +139,7 @@
         </tr>
         <tr>
             <td class="n1">10</td>
-            <td><a href="coins.html">PEPU</a></td>
+            <td><a href="/coin.html/jingo.html"><img class="coinsm" src="/assets/coinimg/jingo.jpg">jinggo </a></td>
             <td><a href="https://t.me/wavezads"> <h4 class="boost1">boost</h4></a></td>
             <td><p class="tboost"><img class="moon" src="/assets/pngegg.png">X2,300 </p></td>
             <td>ETH</td>
