--- a/header.html
+++ b/header.html
@@ -28,11 +28,11 @@
                   
                     <li><a href="/index.html"><img class="logo" src="/assets/mainlogo.png"></a></li>
                     <span class="onlyd">
-                    <li><a href="https://t.me/bullishmarketzone"><img class="coin2" src="/assets/vecteezy_telegram-png-icon_16716482.png"></a></li>
-                   <li><a class="divcoin" href="https://t.me/bullishmarketzone">255k</a></li>
-                    <li class="coin1"><a href="https://t.me/bullishmarketzone">coin</a></li>
+                    <li><a href="https://t.me/coinwavezz"><img class="coin2" src="/assets/vecteezy_telegram-png-icon_16716482.png"></a></li>
+                   <li><a class="divcoin" href="https://t.me/coinwavezz">255k</a></li>
+                    <li class="coin1"><a href="https://t.me/coinwavezz">coin</a></li>
                     <li><a href="#"><img class="coin4" src="/assets/vecteezy_telegram-png-icon_16716482.png"></a></li>
-                   <li><a class="divcoin1" href="https://t.me/bullishmarketzone">25k</a></li>
+                   <li><a class="divcoin1" href="https://t.me/coinwavezz">25k</a></li>
                     <li class="coin1"><a href="#">	
                       <!--<form id="new-task-form">
                       <input 
