--- a/newscenter.html
+++ b/newscenter.html
@@ -12,6 +12,25 @@
 <h1 class="jnews">NEWS</h1>
 <div class="carlist-wrapper">
   <div class="carlist-slide">
+
+    <div class="carlist-1">
+        <span class="ccc">
+            <h4></h4>
+            <div class="dd">
+          <a><img href="/newshere.html/eurusd.html" class="c1" id="c1" src="/assets/newsimg/forex.webp"></a>  
+        </span>
+        <div class="car-details">
+      <a href="/newshere.html/eurusd.html">  <h4 class="h33">EURUSD Analysis: Double Top Target Reached - What's Next?</h4></a>
+        <br>
+        <h4 class="hh5">11:17am 19th oct 2024</h4>
+      <!--  <h4 class="h44">43 minutes ago</h4>-->
+        <br>
+      
+        
+        </div>
+        </div>
+        </div>
+
     <div class="carlist-1">
         <span class="ccc">
             <h4></h4>
