--- a/newshere.html/airdrop.html
+++ b/newshere.html/airdrop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>airdrop</title>
     <link rel="stylesheet" href="/styles.css/coins.css">
     <link rel="stylesheet" href="/styles.css/news.css">
     <link rel="stylesheet" href="/styles.css/style.css">
@@ -31,21 +31,25 @@
         <a href="#"><img class="adscoin3" src="/assets/rRPWvY7TgblG7XgIgqgC7BtX4uC2P1MjlxQtrX2v.png"></a>
     </div>
     <div class="coinl">
-        <img class="coinlogo" src="/assets/newsimg/hug.jpeg">
+        <img class="coinlogo" src="/assets/newsimg/airdrop.jpeg">
     </div>
     <div class="infobox">
         <div class="infobox1" id="infobox">
-            <h3 class="telee"><img class="pimg" src="/assets/newsimg/bulish.avif">Hey, Tommies 🍅🍅</h3>
-                <p class="coinf1">We have some exciting news that we can't wait to share with you! </p>
+            <h3 class="telee"><img class="pimg" src="/assets/newsimg/airdrop.jpeg">🚀 Get Ready for Your W-Coin Airdrop! 🚀</h3>
+                <p class="coinf1">Mates, the airdrop is coming, and EVERYONE can grab tokens! 🎉 </p>
                      <br>
                      <div class="newsim">
-                     <img class="newsimg" src="/assets/newsimg/bulish.avif">
+                     <img class="newsimg" src="/assets/newsimg/airdrop.jpeg">
                 </div>
                 <br>
                      <div>
-                        <p class="coinf11">🤑 We're in talks with new partners so that, in addition to the end-of-season Airdrop, you'll be able to earn $$ every day
-                            🚀 We're developing new utilities 
-                            $TOM | The Token of 2024 🍅</p>
+                        <p class="coinf11">
+                            • Connect your $TON wallet
+                            • Complete 10+ daily tasks
+                            • Stay active on $WAI & tasks
+                            • Keep your Mates engaged
+                            
+                            📅 Snapshot on Oct 27th 👉 Stay active and get your W-Coin!</p>
                      </div>
         </div>
        </div>
