--- a/newshere.html/eurusd.html
+++ b/newshere.html/eurusd.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="coin" href="/assets/coinimg/casino.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>eud</title>
     <link rel="stylesheet" href="/styles.css/coins.css">
     <link rel="stylesheet" href="/styles.css/news.css">
     <link rel="stylesheet" href="/styles.css/style.css">
@@ -31,21 +32,22 @@
         <a href="#"><img class="adscoin3" src="/assets/rRPWvY7TgblG7XgIgqgC7BtX4uC2P1MjlxQtrX2v.png"></a>
     </div>
     <div class="coinl">
-        <img class="coinlogo" src="/assets/newsimg/hug.jpeg">
+        <img class="coinlogo" src="/assets/newsimg/forex.webp">
     </div>
     <div class="infobox">
         <div class="infobox1" id="infobox">
-            <h3 class="telee"><img class="pimg" src="/assets/newsimg/bulish.avif">Hey, Tommies 🍅🍅</h3>
-                <p class="coinf1">We have some exciting news that we can't wait to share with you! </p>
+            <h3 class="telee"><img class="pimg" src="/assets/newsimg/forex.webp">EURUSD Analysis: Double Top Target Reached - What's Next?
+            </h3>
+                <p class="coinf1">The DXY’s rebound</p>
                      <br>
                      <div class="newsim">
-                     <img class="newsimg" src="/assets/newsimg/bulish.avif">
+                     <img class="newsimg" src="/assets/newsimg/forex.webp">
                 </div>
                 <br>
                      <div>
-                        <p class="coinf11">🤑 We're in talks with new partners so that, in addition to the end-of-season Airdrop, you'll be able to earn $$ every day
-                            🚀 We're developing new utilities 
-                            $TOM | The Token of 2024 🍅</p>
+                        <p class="coinf11">
+                            The DXY’s rebound from the 100.15 low is currently aligned with the 0.618 Fibonacci retracement level of the downtrend between the high of June 2024 (106.12) and low of September 2024 (100.15). Positive non-farm payroll, CPI, and retail sales data boosted the dollar alongside rising global uncertainties. Besides haven demand behind geopolitical tensions, the uncertainty regarding the US 
+                            elections is playing a significant role. In her recent speech, Treasury Secretary Janet Yellen warned that a Trump election, along with his proposed tariff policies, could reignite inflation risks and harm the economy.</p>
                      </div>
         </div>
        </div>
