--- a/newscenter.html
+++ b/newscenter.html
@@ -14,6 +14,25 @@
   <div class="carlist-slide">
 
     <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
+        <a><img href="/newshere.html/xrp.html" class="c1" id="c1" src="/assets/newsimg/xrp.jpg"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/xrp.html">  <h4 class="h33">Ripple Chief Legal Officer Stuart Alderoty recently  </h4></a>
+      <br>
+      <h4 class="hh5">3.01pmam 20th oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+
+    <div class="carlist-1">
         <span class="ccc">
             <h4></h4>
             <div class="dd">
