--- a/newscenter.html
+++ b/newscenter.html
@@ -17,6 +17,26 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
+        <a><img href="/newshere.html/sec.html" class="c1" id="c1" src="/assets/newsimg/sec.avif"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/sec.html">  <h4 class="h33">SEC Chair wishes Bitcoin a ‘sweet sixteen’ for white paper anniversary</h4></a>
+      <br>
+      <h4 class="hh5">8:14px 22th oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+
+
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
         <a><img href="/newshere.html/xrp.html" class="c1" id="c1" src="/assets/newsimg/xrp.jpg"></a>  
       </span>
       <div class="car-details">
