--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="coin" href="/assets/coinimg/casino.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="CoinWavez | Crypto Listings, News & Market Insights">
+    <meta name="description" content="Stay up-to-date with the latest cryptocurrency listings, market news, and expert insights on CoinWavez. Explore new coin releases, stay informed with daily crypto news, and get in-depth analysis for smarter trading decisions. Perfect for traders, investors, and crypto enthusiasts.">
+    <meta name="keywords" content="cryptocurrency, crypto listings, coin news, new coin releases, crypto updates, blockchain, crypto insights, CoinWavez, trading, investing, crypto market news">
+    <meta name="author" content="CoinWavez Team">
     <title>coinwavez</title>
     
-    <link rel="stylesheet" href="styles.css\style.css">
+    <link rel="stylesheet" href="/styles.css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
 </head>
 <body>
