--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="CoinWavez | Crypto Listings, News & Market Insights">
     <meta name="description" content="Stay up-to-date with the latest cryptocurrency listings, market news, and expert insights on CoinWavez. Explore new coin releases, stay informed with daily crypto news, and get in-depth analysis for smarter trading decisions. Perfect for traders, investors, and crypto enthusiasts.">
-    <meta name="keywords" content="cryptocurrency, crypto listings, coin news, new coin releases, crypto updates, blockchain, crypto insights, CoinWavez, trading, investing, crypto market news">
+    <meta name="keywords" content="your number one crypto coin, crypto listings, coin news, new coin releases, crypto updates, blockchain, crypto insights, CoinWavez, trading, investing, crypto market news,crypto prices">
     <meta name="author" content="CoinWavez Team">
     <title>coinwavez</title>
     
