--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
 </head>
 <body>
- 
+  <meta name="google-site-verification" content="8KrIEOyw74dhmG0ci_x6Az7Ejd-HJHv2sDoYFRV5ao4" />
       
       <div class="headerr">
         <div class="h1">
