--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Stay up-to-date with the latest cryptocurrency listings, market news, and expert insights on CoinWavez. Explore new coin releases, stay informed with daily crypto news, and get in-depth analysis for smarter trading decisions. Perfect for traders, investors, and crypto enthusiasts.">
     <meta name="keywords" content="your number one crypto coin, crypto listings, coin news, new coin releases, crypto updates, blockchain, crypto insights, CoinWavez, trading, investing, crypto market news,crypto prices">
     <meta name="author" content="CoinWavez Team">
-    <title>coinwavez</title>
+    <title>Coinswavez - Your number one crypto coin listings, crypto prices and news website -</title>
     
     <link rel="stylesheet" href="/styles.css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
