--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <link rel="stylesheet" href="/styles.css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <meta name="google-site-verification" content="8KrIEOyw74dhmG0ci_x6Az7Ejd-HJHv2sDoYFRV5ao4" />
-</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JBFJX94MJV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JBFJX94MJV');
+</script>
+  </head>
 <body>
  
       
