--- a/newscenter.html
+++ b/newscenter.html
@@ -17,6 +17,24 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
+        <a><img href="/newshere.html/agii.html" class="c1" id="c1" src="/assets/newsimg/agi.jpeg"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/robot.html">  <h4 class="h33">OpenAI’s ‘AGI Readiness’ chief quits — ‘I want to be less biased’ </h4></a>
+      <br>
+      <h4 class="hh5">8:35pm 24th oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
         <a><img href="/newshere.html/sec.html" class="c1" id="c1" src="/assets/newsimg/sec.avif"></a>  
       </span>
       <div class="car-details">
