--- a/newscenter.html
+++ b/newscenter.html
@@ -17,6 +17,24 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
+        <a><img href="/newshere.html/coinbase.html" class="c1" id="c1" src="/assets/newsimg/coinb.avif"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/sec.html">  <h4 class="h33">Crypto-native AI will transform Web3: Coinbase Ventures</h4></a>
+      <br>
+      <h4 class="hh5">8:57pm 22th oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
         <a><img href="/newshere.html/agii.html" class="c1" id="c1" src="/assets/newsimg/agi.jpeg"></a>  
       </span>
       <div class="car-details">
