--- a/newscenter.html
+++ b/newscenter.html
@@ -17,7 +17,7 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
-        <a><img href="/newshere.html/altcoin.html" class="c1" id="c1" src="/assets/newsimg/agi.jpeg"></a>  
+        <a><img href="/newshere.html/altcoin.html" class="c1" id="c1" src="/assets/newsimg/dolls.png"></a>  
       </span>
       <div class="car-details">
     <a href="/newshere.html/altcoin.html">  <h4 class="h33">Altcoin season ‘more probable’ once Bitcoin hits $80K — Hashkey Capital  </h4></a>
