--- a/newscenter.html
+++ b/newscenter.html
@@ -17,6 +17,24 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
+        <a><img href="/newshere.html/goat.html" class="c1" id="c1" src="/assets/newsimg/goat.png"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/goat.html">  <h4 class="h33">GOAT crypto surges amid FOMO after multiple exchange listings</h4></a>
+      <br>
+      <h4 class="hh5">12:02am 23rd oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
         <a><img href="/newshere.html/altcoin.html" class="c1" id="c1" src="/assets/newsimg/dolls.png"></a>  
       </span>
       <div class="car-details">
