--- a/newscenter.html
+++ b/newscenter.html
@@ -17,6 +17,25 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
+        <a><img href="/newshere.html/cow.html" class="c1" id="c1" src="/assets/newsimg/cow.png"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/cow.html">  <h4 class="h33">Hoppy token hits all-time high, rare pattern points to more gains  </h4></a>
+      <br>
+      <h4 class="hh5">12:12am 25th oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
         <a><img href="/newshere.html/goat.html" class="c1" id="c1" src="/assets/newsimg/goat.png"></a>  
       </span>
       <div class="car-details">
